syntax = "proto3";

package ai.grakn.rpc;

service Grakn {
    rpc Tx (stream TxRequest) returns (stream TxResponse);
}

message TxRequest {
    oneof request {
        Open open = 1;
        Commit commit = 2;
        ExecQuery execQuery = 3;
        Infer infer = 4;
    }
}

message Open {
    Keyspace keyspace = 1;
    TxType txType = 2;
}

message Commit {}

message ExecQuery {
    Query query = 1;
}

message Infer {
    bool value = 1;
}

message TxResponse {
    oneof response {
        QueryResult queryResult = 1;
    }
}

message QueryResult {
    string value = 1;
}

enum TxType {
    Read = 0;
    Write = 1;
    Batch = 2;
}

message Keyspace {
    string value = 1;
}

message Query {
    string value = 1;
}
